feat: setup socket layer
