# models/question.go
@@ -8,10 +8,10 @@ import (
 
 // Question represents a question
 type Question struct {
-	ID            primitive.ObjectID `bson:"id"`
+	ID            primitive.ObjectID `bson:"_id"`
 	Question      string             `bson:"question"`
 	Answers       []string           `bson:"answers"`
 	CorrectAnswer string             `bson:"correctAnswer"`
-	CreatedAt     time.Time          `bson:"created_At"`
-	UpdatedAt     time.Time          `bson:"updated_At"`
+	CreatedAt     time.Time          `bson:"created_at"`
+	UpdatedAt     time.Time          `bson:"updated_at"`
 }
